# ravel

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MSRV.md  README.md  lefthook.yml
.github/: actionlint.yaml
.github/workflows/: ci.yml  release.yml
crates/ravel-cli/: Cargo.toml
crates/ravel-cli/src/: main.rs
crates/ravel-cli/tests/: cli.rs  concurrent_process_sync.rs  daemon_lifecycle.rs  install_config.rs  mcp_conformance.rs
crates/ravel-core/: Cargo.toml
crates/ravel-core/src/: analysis.rs  boundaries.rs  cache.rs  config.rs  daemon.rs  durable_io.rs  engine.rs  entries.rs  generation_components.rs  generation_gc.rs  generation_pack.rs  git.rs  graph.rs  incremental_graph.rs  install.rs  lib.rs  mcp.rs  model.rs  policy.rs  resolver.rs  scanner.rs  search.rs  storage.rs  structural.rs  structural_reverse.rs  timing.rs  watch.rs
crates/ravel-core/tests/: config_fixtures.rs  hubs_lookup_proof.rs  orphans_integration.rs  refactor_plan_proof.rs  structural_affected_oracle.rs  sync_equivalence.rs
docs/: config.md  install.md  performance.md
npm/: .gitignore  install.js  package.json
npm/test/: install.test.js
scripts/: agent_smoke.sh  golden_check.py  install.ps1  install.sh  property_check.py
