[workspace]
resolver = "2"
members = ["crates/ravel-core", "crates/ravel-cli"]

[workspace.package]
version = "1.3.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/guigaoliveira/ravel"

[workspace.dependencies]
anyhow = "1.0.98"
blake3 = { version = "1.8.2", features = ["rayon"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
fs4 = { version = "0.13.1", default-features = false, features = ["sync"] }
ignore = "0.4.23"
interprocess = "2.4.2"
moka = { version = "0.12.15", features = ["sync"] }
memmap2 = "0.9.9"
notify = "9.0.0-rc.4"
petgraph = "0.8.3"
rayon = "1.10.0"
rmcp = { version = "2.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.1.2"
tree-sitter = "0.26.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tempfile = "3.27.0"
regex = "1"
rkyv = { version = "0.8.17", features = ["bytecheck"] }
rustc-hash = "2"

[profile.release]
lto = "thin"
# Keep parallel code generation for faster release matrix builds; thin LTO still
# performs cross-unit optimization for the distributed binary.
codegen-units = 16
panic = "abort"

[profile.dev]
# Full variable-level debug info makes this dependency-heavy CLI slower to link
# and consumes substantially more target/ space. Line tables preserve useful
# backtraces while keeping the everyday edit/build loop lighter.
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
