[package]
name = "ravel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core engine for Ravel — local TS/JS code graph, indexing, query, and MCP server."
repository.workspace = true
keywords = ["code-graph", "typescript", "mcp", "ai-agents", "static-analysis"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
gix.workspace = true
ignore.workspace = true
moka.workspace = true
notify.workspace = true
petgraph.workspace = true
rayon.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
thiserror.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
bincode = "1"
regex = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
