[package]
name = "ravel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core engine for Ravel — local TypeScript/JavaScript code graph and indexing."
repository.workspace = true
keywords = ["code-graph", "typescript", "mcp", "ai-agents", "static-analysis"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
fs4.workspace = true
ignore.workspace = true
interprocess.workspace = true
moka.workspace = true
notify.workspace = true
petgraph.workspace = true
rayon.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
bincode = "1"
regex = { workspace = true }
rustc-hash = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
